# MinFlightScheduler

./: .gitignore  CMakeLists.txt  README.md  config.txt  data.txt
lib/: CMakeLists.txt
src/: CAlgorithm.cpp  CAlgorithm.h  CApplication.cpp  CApplication.h  CBackground.cpp  CBackground.h  CGui.cpp  CGui.h  CTestcase.cpp  CTestcase.h  CWidgets.cpp  CWidgets.h  main.cpp  querybuilder.h
testcase/: data.txt
